--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -14,7 +14,7 @@
     <string name="choose_translation_language">Elige el idioma de la traducción</string>
     <string name="show_more_results">Mostrar más resultados</string>
     <string name="main_lyrics_search_result">Resultados de la búsqueda</string>
-    <string name="similiar_lyrics_search_result">Resultados similares</string>
+    <string name="similar_lyrics_search_result">Resultados similares</string>
     <string name="no_word_search_results">Desafortunadamente no hemos podido encontrar la frase \"%1$s\"</string>
     <string name="filter">Filtrar</string>
     <string name="sort">Ordenar</string>
@@ -40,7 +40,7 @@
     <string name="choose_source">Elegir película o serie</string>
     <string name="curses">Maldiciones</string>
     <string name="without_curses">Sin maldiciones</string>
-    <string name="clear">Limpiar filtros</string>
+    <string name="clear_filters">Limpiar filtros</string>
     <string name="library">Biblioteca</string>
     <string name="history">Historia</string>
     <string name="history_desc">Volver a las frases buscadas anteriores</string>
@@ -52,16 +52,16 @@
     <string name="settings_desc">Ajusta nuestra aplicación a tus preferencias</string>
     <string name="latest_movie">En Lyricated encontrarás subtítulos de:</string>
     <string name="appearance">Apariencia</string>
-    <string name="defaultsetting">Defecto</string>
-    <string name="darkmode">Modo oscuro</string>
-    <string name="lightmode">Modo claro</string>
-    <string name="edumaterials">Materiales educativos</string>
+    <string name="default_setting">Defecto</string>
+    <string name="dark_mode">Modo oscuro</string>
+    <string name="light_mode">Modo claro</string>
+    <string name="edu_materials">Materiales educativos</string>
     <string name="show">Mostrar</string>
-    <string name="dontshow">No mostrar</string>
+    <string name="do_not_show">No mostrar</string>
     <string name="save">Guardar</string>
-    <string name="dontsave">No guardar</string>
-    <string name="deletehistory">Eliminar la historia</string>
-    <string name="deselectall">Deseleccionar todos guardados</string>
+    <string name="do_not_save">No guardar</string>
+    <string name="delete_history">Eliminar la historia</string>
+    <string name="deselect_all">Deseleccionar todos guardados</string>
     <string name="difficulty">Dificultad</string>
     <string name="easy">Fácil</string>
     <string name="medium">Medio</string>
@@ -71,7 +71,7 @@
     <string name="reveal_word">Revelar palabra</string>
     <string name="show_translation">Mostrar traducción</string>
     <string name="loading">cargando resultado…</string>
-    <string name="tryto">intenta</string>
+    <string name="try_to">intenta</string>
     <string name="translate">traducir</string>
     <string name="set_quality_to_1">Establece la calidad en 1</string>
     <string name="choosing_source">Selección del fuente</string>
@@ -83,4 +83,12 @@
     <string name="hello_in">Bienvenido a</string>
     <string name="search_first_phrase">Busca tu primera frase</string>
     <string name="first">primera</string>
+    <string name="clear">Borrar</string>
+    <string name="switch_languages">Cambiar idiomas</string>
+    <string name="close">Cerrar</string>
+    <string name="tts">Texto a voz</string>
+    <string name="collapse_list">Contraer la lista</string>
+    <string name="delete">Borrar</string>
+    <string name="add_to_favorites">Agregar a los favoritos</string>
+    <string name="more_information">Más información</string>
 </resources>
